2002-07-16  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/flags.h,actors.h,etc:  Moved 'dont_move' and
	'no_spell_casting' flags to the spots in Obj_flags where they're
	referred to in Usecode.
	*imagewin/ibuf.{cc,h}:  rgba() converts to 32-bit format (untested).

2002-07-16  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* orangedress.shp, bluedress.shp: new paperdoll art by sbx

2002-07-15  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/greentop.shp: new paperdoll art. Thanks sbx!
	* usecode/ucxt/Makefile.am: fixed --disable-tools
	* configure.in: install gnome things to $(datadir)
	(instead of $(GNOMEDATADIR)). This allows non-root installs.
	* data/Makefile.am: don't install estudio data when not building that

2002-07-14  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* Spellbook_gump.cc: fixed up offsets; fixed NULL shape error

2002-07-12  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* chunks.cc: worked around compiler bug (gcc 2.96-110) for is_blocked

2002-07-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc (public): Call_guards logic moved to
	Actor::reduce_health(), so spells will get you in trouble.

2002-07-11  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.h,actors.cc:  All NPC's except Avatar get 4-frame
	(smooth) walking.  This matches the original U7.

2002-07-10  Jeff Freedman  <jsf@usf-cf-x86-linux-1>

	* Lots:  Added gumpman to Singletons class.
	* gumps/GameplayOptions_gump.cc,gamewinc.cc:  Walk_after_teleport
	option is no longer needed (it's always TRUE now).
	* gamewin.cc,etc:  Cleanup:  NPC list in Chunks has been removed.

2002-07-10  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.cc: undo double click change. (it broke gumps)

2002-07-10  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc,paths.cc:  Removed limit on finding/dragging items on
	different lift from Avatar.

	* objs/egg.cc (Egg_object): Party_near + auto_reset ==